Add RecipeBook sort functionality
This sort feature provides some predefined sort algorithms that either keep the insertion order, compare the value (recipe & group), or prioritize groups over recipes or the way around.
Custom ordering is possible too, so that each group/recipe can be assigned a value.
By default, groups/recipes of higher value come last and lower value first.
The order option can be set to 'descending' to reverse that order.